[FEATURE] Se agrega cardsHelper para poder validar transacciones.
